--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div class="fixed top-6 right-6">
+  <p class="font-bold text-xs">Made with ❤️ by TheProgrammerDude</p>
+</div>
+
 <div class="flex flex-col items-center justify-center h-screen">
   <img src="../assets/qr.png" alt="" class="h-[200px]" />
   <p class="text-2xl font-bold">NgQr Generator</p>
